a little DRY, a little refactoring to make testing easier